--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "moment": "^2.29.1",
         "mongoose": "^6.2.3",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^1.3.3"
+        "nodemon": "^1.3.3",
+        "stack": "^0.1.0"
     }
 }
